tests/expected_invalid_match_non_state_subject.diag.out
<input>:3:11: error: match requires a state value or an expression that may fail (`fails`)
        match value {
              ^^^^^
